2014-06-11  klen

	* Version 0.1.3
	* Choose API version automatically

2014-06-09  klen

	* Version 0.1.0
	* Initial release